--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Cards</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body></body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Profile Cards</title>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<div class="container">
+			<div class="card">
+				<div class="img">
+					<img src="./images/img1.jpg" alt="Sue Shei" />
+				</div>
+				<div class="title">
+					<div class="name">SUE SHEI</div>
+					<div class="role">FOUNDER</div>
+				</div>
+				<div class="description">
+					<p>
+						Which is worse, that everyone has his price, or that the price is
+						always so low.
+					</p>
+				</div>
+				<div class="media">
+					<a href="#"><i class="reddit"></i></a>
+					<a href="#"><i class="twitter"></i></a>
+					<a href="#"><i class="vimeo"></i></a>
+				</div>
+			</div>
+			<div class="card">
+				<div class="img">
+					<img src="./images/img2.jpg" alt="Will Barrow" />
+				</div>
+				<div class="title">
+					<div class="name">WILL BARROW</div>
+					<div class="role">WEB DESIGNER</div>
+				</div>
+				<div class="description">
+					<p>
+						I'm killing time while I wait for life to shower me with meaning and
+						happiness.
+					</p>
+				</div>
+				<div class="media">
+					<a href="#"><i class="reddit"></i></a>
+					<a href="#"><i class="twitter"></i></a>
+					<a href="#"><i class="vimeo"></i></a>
+				</div>
+			</div>
+			<div class="card">
+				<div class="img">
+					<img src="./images/img3.jpg" alt="Indigo Violet" />
+				</div>
+				<div class="title">
+					<div class="name">Sue Shei</div>
+					<div class="role">PUBLIC RELATIONS</div>
+				</div>
+				<div class="description">
+					<p>
+						The only skills I have the patience to learn are those that have no
+						real application in life.
+					</p>
+				</div>
+				<div class="media">
+					<a href="#"><i class="reddit"></i></a>
+					<a href="#"><i class="twitter"></i></a>
+					<a href="#"><i class="vimeo"></i></a>
+				</div>
+			</div>
+			<div class="card"></div>
+			<div class="card"></div>
+		</div>
+	</body>
 </html>
