fix a syntax error and delete useless tags

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<img src="./images/img3.jpg" alt="Indigo Violet" />
 				</div>
 				<div class="title">
-					<div class="name">Sue Shei</div>
+					<div class="name">INDIGO VIOLET</div>
 					<div class="role">PUBLIC RELATIONS</div>
 				</div>
 				<div class="description">
@@ -69,8 +69,6 @@
 					<a href="#"><i class="vimeo"></i></a>
 				</div>
 			</div>
-			<div class="card"></div>
-			<div class="card"></div>
 		</div>
 	</body>
 </html>
