--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 					</p>
 				</div>
 				<div class="media">
-					<a href="#"><i class="reddit"></i></a>
-					<a href="#"><i class="twitter"></i></a>
-					<a href="#"><i class="vimeo"></i></a>
+					<a href="#"><i class="ion-social-reddit"></i></a>
+					<a href="#"><i class="ion-social-twitter"></i></a>
+					<a href="#"><i class="ion-social-vimeo"></i></a>
 				</div>
 			</div>
 			<div class="card">
@@ -44,9 +44,9 @@
 					</p>
 				</div>
 				<div class="media">
-					<a href="#"><i class="reddit"></i></a>
-					<a href="#"><i class="twitter"></i></a>
-					<a href="#"><i class="vimeo"></i></a>
+					<a href="#"><i class="ion-social-reddit"></i></a>
+					<a href="#"><i class="ion-social-twitter"></i></a>
+					<a href="#"><i class="ion-social-vimeo"></i></a>
 				</div>
 			</div>
 			<div class="card">
@@ -64,9 +64,9 @@
 					</p>
 				</div>
 				<div class="media">
-					<a href="#"><i class="reddit"></i></a>
-					<a href="#"><i class="twitter"></i></a>
-					<a href="#"><i class="vimeo"></i></a>
+					<a href="#"><i class="ion-social-reddit"></i></a>
+					<a href="#"><i class="ion-social-twitter"></i></a>
+					<a href="#"><i class="ion-social-vimeo"></i></a>
 				</div>
 			</div>
 		</div>
